Upgrade to TOP API 0.14 (#134)
* Upgrade to top api 0.14

Migrate deprecated method calls

* Improve logging

* Upgrade dependencies

* Fix some compiler warnings

* Fix NullPointerException